[tool.poetry]
name = "repl_python3_Python-Bootcamp"
version = "0.1.0"
description = ""
authors = ["boitmann <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
prettytable = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
